--- a/ml-visualized-web/package.json
+++ b/ml-visualized-web/package.json
@@ -26,6 +26,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-katex": "^3.1.0",
+    "recharts": "^3.7.0",
     "tailwind-merge": "^3.4.1",
     "tailwindcss-animate": "^1.0.7"
   },
