--- a/ml-visualized-web/package.json
+++ b/ml-visualized-web/package.json
@@ -23,9 +23,11 @@
     "lucide-react": "^0.564.0",
     "next": "16.1.6",
     "next-mdx-remote": "^6.0.0",
+    "plotly.js": "^3.3.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-katex": "^3.1.0",
+    "react-plotly.js": "^2.6.0",
     "recharts": "^3.7.0",
     "tailwind-merge": "^3.4.1",
     "tailwindcss-animate": "^1.0.7"
